# tree-sitter-aly

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  README.org  Win-GenerateProject.bat  binding.gyp  grammar.bnf  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
scripts/: Generate-Project.sh  Win-GenerateProject.bat
src/: grammar.json  node-types.json  parser.c
